# llama_internet_chatbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  loki-config.yaml
migrations/2023-07-26-152821_chats/: down.sql  up.sql
migrations/2023-07-26-152830_conversations/: down.sql  up.sql
rank_service/: Dockerfile  rank.py
src/: main.rs  schema.rs  utils.rs
src/handlers/: mod.rs
src/handlers/chat/: db.rs  mod.rs
src/handlers/conversation/: db.rs  mod.rs
src/models/: mod.rs
