[package]
name = "llama_internet_chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json", "uuid"]

# [dependencies.rocket_dyn_templates]
# features = ["handlebars"]

# [dependencies.rocket_contrib]
# version = "0.4.4"
# default-features = false
# features = ["json"]
