[package]
name = "llama_internet_chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
] }
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4.26", features = ["serde"] }
rocket_sync_db_pools = {version = "0.1.0-rc.3",features = ["diesel_postgres_pool"]}
llama_cpp_rs = "0.1.2"
# llama_cpp_rs = { path = "../rust_llama_cpp" }

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json", "uuid"]
